--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.3",
+    "@tabler/icons-react": "^3.3.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
+    "tailwind-merge": "^2.3.0",
+    "three": "^0.164.1",
+    "three-globe": "^2.31.0"
+  }
 }
