--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "@splinetool/react-spline": "^2.2.6",
     "@tabler/icons-react": "^3.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
