--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tabler/icons-react": "^3.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.397.0",
+    "next-auth": "^4.24.7",
     "tailwind-merge": "^2.3.0",
     "three-globe": "^2.31.0"
   }
