--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,5 +1,5 @@
-GITHUB_ID
-GITHUB_SECRET
-GOOGLE_ID
-GOOGLE_SECRET
-NEXTAUTH_SECRET
+GITHUB_ID=""
+GITHUB_SECRET=""
+GOOGLE_ID=""
+GOOGLE_SECRET=""
+NEXTAUTH_SECRET=""
