--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   ],
   "dependencies": {
     "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.3",
+    "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "^2.2.6",
     "@tabler/icons-react": "^3.3.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.397.0",
     "next-auth": "^4.24.7",
     "tailwind-merge": "^2.3.0",
-    "three-globe": "^2.31.0"
+    "three": "^0.170.0",
+    "three-globe": "^2.31.0",
+    "three-stdlib": "^2.34.0"
   }
 }
