--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
+    "./aurora-background": "./src/aurora-background.tsx",
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./floating-nav": "./src/floating-nav.tsx",
+    "./globe": "./src/globe.tsx",
+    "./sticky-scroll-reveal": "./src/sticky-scroll-reveal.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
