--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
-    "prisma": "^5.22.0",
-    "typescript": "^5.6.3"
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0"
+    "@types/glob": "^8.1.0",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.9.0",
+    "typescript": "^5.7.2"
   }
 }
