--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,17 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@react-three/drei": "^9.119.0",
+    "@react-three/fiber": "^8.17.10",
     "@repo/ui": "*",
+    "@types/three": "^0.170.0",
+    "axios": "^1.7.8",
+    "lucide-react": "^0.462.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.34.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
